<resources>
    <string name="app_name">Apple Music App</string>
    <string name="album_artwork">Album Artwork</string>
    <string name="i_m_not_a_rapper">I\'m Not a Rapper</string>
    <string name="supahotfire">SupaHotFire</string>
    <string name="album_list_fragment_label">Album List</string>
    <string name="album_details_fragment_label">Details</string>
    <string name="back">❮ back</string>
    <string name="albumName">placeholder</string>
    <string name="artistName">artistName</string>
    <string name="explicit">explicit</string>
    <string name="releaseDate">Released: %1$s</string>
    <string name="genres">Genre(s): %1$s</string>
    <string name="copyright">copyright</string>
    <string name="number">number</string>
    <string name="actionbar_spinner">ActionBar Spinner</string>
    <string name="allow_explicit">Allow Explicit</string>

</resources>
