<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/albumArtworkView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/album_artwork"
        tools:srcCompat="@tools:sample/avatars"
        />

    <TextView
        android:id="@+id/albumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/albumArtworkView"
        android:layout_toRightOf="@+id/albumArtworkView"
        android:text="@string/i_m_not_a_rapper"
        android:textSize="20sp"
        tools:text="@tools:sample/cities"
        />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/albumArtworkView"
        android:layout_below="@id/albumName"
        android:text="@string/supahotfire"
        android:layout_toEndOf="@+id/albumArtworkView"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        tools:text="@tools:sample/first_names"
        />



</RelativeLayout>